--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion "21.1.2"
     defaultConfig {
         applicationId "hu.valamas.hevesitoolbox"
-        minSdkVersion 7
+        minSdkVersion 10
         targetSdkVersion 16
-        versionCode 4
-        versionName "0.4"
+        versionCode 5
+        versionName "0.5"
     }
     buildTypes {
         release {
@@ -22,4 +22,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.android.support:appcompat-v7:21.0.3'
 }
