--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,10 @@ android {
     buildToolsVersion "21.1.2"
     defaultConfig {
         applicationId "hu.valamas.hevesitoolbox"
-        minSdkVersion 10
+        minSdkVersion 7
         targetSdkVersion 16
-        versionCode 5
-        versionName "0.5"
+        versionCode 6
+        versionName '0.6'
     }
     buildTypes {
         release {
