--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,10 @@ android {
     buildToolsVersion "21.1.2"
     defaultConfig {
         applicationId "hu.valamas.hevesitoolbox"
-        minSdkVersion 7
+        minSdkVersion 10
         targetSdkVersion 16
-        versionCode 6
-        versionName '0.6'
+        versionCode 8
+        versionName '0.6.5'
     }
     buildTypes {
         release {
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.google.android.gms:play-services:6.+'
     //compile 'com.google.android.gms:play-services:6.5.87'
     //compile 'com.android.support:appcompat-v7:21.0.3'
 }
