--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.valamas.hevesitoolbox" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-                android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme"
         android:value="@integer/google_play_services_version" >
-
-        <meta-data android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version" />
-
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name="hu.valamas.hevesitoolbox.MainActivity"
@@ -28,7 +26,7 @@
         </activity>
         <activity
             android:name="hu.valamas.hevesitoolbox.szamolasok.iranyszog"
-            android:label="@string/title_activity_iranyszog">
+            android:label="@string/title_activity_iranyszog" >
         </activity>
         <activity
             android:name="hu.valamas.hevesitoolbox.szamolasok.polarispont"
@@ -54,10 +52,14 @@
             android:name="hu.valamas.hevesitoolbox.szamolasok.atvalto"
             android:label="@string/title_activity_atvalto" >
         </activity>
-
-        <activity android:name="com.google.android.gms.ads.AdActivity"
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+        <activity
+            android:name="hu.valamas.hevesitoolbox.szamolasok.szelveny"
+            android:label="@string/title_activity_szelveny" >
+        </activity>
     </application>
 
 </manifest>
