--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,14 @@ android {
             storePassword 'Hirosima 45'
         }
     }
-    compileSdkVersion 16
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
     defaultConfig {
         applicationId "hu.valamas.hevesitoolbox"
-        minSdkVersion 10
-        targetSdkVersion 16
-        versionCode 11
-        versionName '0.8'
+        minSdkVersion 16
+        targetSdkVersion 22
+        versionCode 12
+        versionName '0.9.0'
     }
     buildTypes {
         release {
@@ -30,14 +30,12 @@ android {
 
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.android.gms:play-services:7.0.0'
-    //compile 'com.google.android.gms:play-services:6.5.87'
-    //compile 'com.android.support:appcompat-v7:21.0.3'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
 }
